Fixing bug on iOS that caused body scrolling when mobile nav was open

--- a/css/app.css
+++ b/css/app.css
@@ -27,6 +27,7 @@ body.not-found {
 
 .no-scroll {
 	overflow: hidden !important;
+	position: fixed !important;
 }
 
 /* Pace Loader */
@@ -159,7 +160,7 @@ body img.about-me-chris {
         opacity: 0;
     }
 
-    20% {
+    27.5% {
         opacity: 0;
         -webkit-transform: translate3d(0, 20px, 0);
         transform: translate3d(0, 20px, 0);
@@ -177,7 +178,7 @@ body img.about-me-chris {
         opacity: 0;
     }
 
-    20% {
+    27.5% {
         opacity: 0;
         -webkit-transform: translate3d(0, 20px, 0);
         transform: translate3d(0, 20px, 0);
@@ -200,7 +201,7 @@ body img.about-me-chris {
         opacity: 0;
     }
 
-    20% {
+    27.5% {
     	opacity: 0;
     	-webkit-transform: translate3d(0, 80px, 0);
         transform: translate3d(0, 80px, 0);
@@ -218,7 +219,7 @@ body img.about-me-chris {
         opacity: 0;
     }
 
-    20% {
+    27.5% {
     	opacity: 0;
     	-webkit-transform: translate3d(0, 80px, 0);
         transform: translate3d(0, 80px, 0);
